# AnisoPermToFEMComparison

./: README.md
FEMcomparison/CreateApproxSpace/: TPZCreateHybridizedH1Spaces.cpp  TPZCreateHybridizedMixedSpaces.cpp  TPZCreateHybridizedMixedSpaces.h
FEMcomparison/FEM/: InputTreatment.cpp  MeshInit.cpp  ScriptTools.cpp  Solver.cpp
FEMcomparison/FEM/Simulations/: CMakeLists.txt  main_ErrorMeasurement.cpp  main_HybridH1.cpp
FEMcomparison/Tools/: DataStructure.h  Tools.cpp
neopz/Material/DarcyFlow/: CMakeLists.txt  TPZAnisotropicPermeability.cpp  TPZAnisotropicPermeability.h  TPZDarcyFlow.cpp  TPZDarcyFlowAniso.cpp  TPZDarcyFlowAniso.h  TPZHybridDarcyFlow.cpp  TPZHybridDarcyFlow.h  TPZHybridDarcyFlowAniso.cpp  TPZHybridDarcyFlowAniso.h  TPZMixedDarcyFlow.cpp  TPZMixedDarcyFlow.h  TPZMixedDarcyFlowAniso.cpp  TPZMixedDarcyFlowAniso.h  TPZMixedDarcyFractureFlow.cpp  TPZMixedDarcyFractureFlow.h
neopz/Matrix/: pzfmatrix.cpp
neopz/Pre/: TPZAnalyticSolution.cpp  TPZAnalyticSolution.h
neopz/StrMatrix/: TPZStructMatrixOMPorTBB.cpp  TPZStructMatrixOMPorTBB.h
